# progetto_calcio

./: Introduzione.py  README.md  average_age.csv  crea_average_age.py  crea_rankings.py  elaborazione_df.py  h2h_premier.csv  largest_win.csv  perpetua.csv  principale.csv  pyproject.toml  rankings.csv  record.csv  titles.csv  top_scorer.csv  winners.csv
pages/: 2_Titles.py  3_Ages.py  4_Cluster.py  5_Big Six.py
